# pbc_sig

./: AUTHORS  CMakeLists.txt  ChangeLog  FindPBC.cmake  INSTALL  Makefile.am  Makefile.in  NEWS  README  config.h.in  configure  configure.ac  makerelease  setup
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
include/: pbc_hash.h  pbc_sig.h
sig/: bbs.c  hash.c  sig.c
test/: bb.c  bbs.c  bls.c  ibs.c
